toolchain/internal/core/analysis/testdata/errors/duplicates/duplicate_enum.vdl
// @expect: E802

enum Status {
	Active
}

enum Status {
	Pending
}
